Improve UI/UX: Update components, fix borders, add custom scrollbars, and enhance responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 
-body{
+body, html {
+
+    overflow-x: hidden; 
+
     font-family: "Josefin Sans", sans-serif;
     
-   
-}
+  }
+
+.App {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  .JobListingsContainer {
+    display: flex;
+    flex-grow: 1;
+    overflow: hidden;
+  }
+  
+  .JobListingsMain {
+    flex: 1;
+    overflow-y: auto;
+  }
+  
+  .AppliedJobsContainer {
+    flex: 0 0 40%;
+    overflow-y: auto;
+  }
+  
